tests/invalid/generated_binop_bitand_int_none/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: int = 1
    y: None = None
    z = x & y
